--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Add the favicon link here -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="ProfilePhoto.jpg" type="image/x-icon" />
     <!-- Optionally, you can include multiple favicon sizes -->
     <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32" />
